[media] az6007: fix incorrect memcpy

Some parts of the C language are subtle and evil. This is one example.

Resolves-bug: https://bugzilla.kernel.org/show_bug.cgi?id=44041

Reported-by: dcb314@hotmail.com
Signed-off-by: Alan Cox <alan@linux.intel.com>
Signed-off-by: Mauro Carvalho Chehab <mchehab@redhat.com>